src/styles/global.css
@import "tailwindcss";

@font-face {
	font-family: 'Valve Oracle';
	src: url('/fonts/valveoracle-thin.ttf') format('truetype');
	font-weight: 100;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: 'Valve Oracle';
	src: url('/fonts/valveoracle-thinitalic.ttf') format('truetype');
	font-weight: 100;
	font-style: italic;
	font-display: swap;
}

@font-face {
	font-family: 'Valve Oracle';
	src: url('/fonts/valveoracle-medium.ttf') format('truetype');
	font-weight: 500;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: 'Valve Oracle';
	src: url('/fonts/valveoracle-mediumitalic.ttf') format('truetype');
	font-weight: 500;
	font-style: italic;
	font-display: swap;
}

@font-face {
	font-family: 'Valve Oracle';
	src: url('/fonts/valveoracle-semibold.ttf') format('truetype');
	font-weight: 600;
	font-style: normal;
	font-display: swap;
}

@font-face {
	font-family: 'Valve Oracle';
	src: url('/fonts/valveoracle-semibolditalic.ttf') format('truetype');
	font-weight: 600;
	font-style: italic;
	font-display: swap;
}

@font-face {
	font-family: 'Valve Pulp';
	src: url('/fonts/VALVEPulp-Bold.woff2') format('woff2');
	font-weight: 700;
	font-style: normal;
	font-display: swap;
}

* {
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none; /* IE/Edge */
}
*::-webkit-scrollbar {
    display: none; /* Chrome, Safari, Opera */
}
:root {
	--rsm-weight-fine: 100;
	--rsm-weight-light: 200;
	--rsm-weight-regular: 340;
	--rsm-weight-medium: 470;
	--rsm-weight-bold: 620;
	--rsm-weight-dark: 770;
	--rsm-weight-black: 900;
}
body {
    font-family: 'Valve Oracle', sans-serif;
    background-color: black;
    margin: 0;
    color: white;
	overflow-x: hidden;
}
.accent {
    color: #e94f66;
    font-weight: 500;
}
.accent-green {
	color: #6ae79a;
    font-weight: 500;
}
.pulp {
	font-family: 'Valve Pulp', sans-serif;
	font-weight: 700;
}
.montiac-mono {
	font-family: 'Montiac Mono', monospace;
}
.montiac-semi-mono {
	font-family: 'Montiac Semi Mono', monospace;
}
.montiac {
	font-family: 'Montiac', sans-serif;
}
.bg-texture {
	background-image: url('/resources/bg_texture.jpg');
	background-size: cover;
}
.bg-texture-dark {
	background-image: url('/resources/bg_texture_dark.jpg');
	background-size: cover;
}
.bg-texture-darkest {
	background-image: url('/resources/bg_texture_darkest.jpg');
	background-size: cover;
}

.block {
	margin: 0.5rem;
	border-radius: 8px;
	border: 2px solid #BE1931;
	background-color: #BE193130;
	padding: 2rem;
	display: flex;
	flex-direction: column;
}
.noborder {
	border-color: transparent;
	background-color: transparent;
}
.scratch-mask-bottom {
	background-image: url('/resources/scratch_mask_bottom.png');
	background-position: center bottom;
	height: 50px;
	width: 100%;
	z-index: 10;
    position: relative;
    background-size: auto 100%;
}
.scratch-mask-top {
	background-image: url('/resources/scratch_mask_top.png');
	background-position: center top;
	height: 50px;
	width: 100%;
	z-index: 10;
    position: relative;
    background-size: auto 100%;
}

.scratch-mask-top-dark {
	background-image: url('/resources/scratch_mask_top_dark.png');
	background-position: center top;
	height: 50px;
	width: 100%;
	z-index: 10;
    position: relative;
    background-size: auto 100%;
}

.text-fancy {
	text-shadow:    -2px -2px 0 #00000040,
					2px -2px 0 #00000040,
					-2px 2px 0 #00000040,
					2px 2px 0 #00000040,
					-2px 0 0 #00000040,
					2px 0 0 #00000040,
					0 -2px 0 #00000040,
					0 2px 0 #00000040,
					2px 0 8px #000;
}

.emoji {
	width: 1em;
	height: 1em;
	position: relative;
	bottom: 2px;
	display: inline-block;
}

